--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -13,6 +13,7 @@
 @using H.LowCode.DesignEngine
 @using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine.Model
+@using H.LowCode.DesignEngine.Application.Contracts
 @using H.LowCode.MetaSchema
 @using H.LowCode.Model
 @using H.Util.Blazor
