--- a/src/DesignEngine/H.LowCode.MyApp/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/_Imports.razor
@@ -13,5 +13,6 @@
 @using H.LowCode.ComponentBase
 @using H.LowCode.MyApp
 @using H.LowCode.DesignEngine.Model
+@using H.LowCode.DesignEngine.Application.Contracts
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
