--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/_Imports.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/_Imports.razor
@@ -6,6 +6,7 @@
 @using H.LowCode.ComponentBase
 @using H.LowCode.RenderEngine
 @using H.LowCode.RenderEngine.Abstraction
+@using H.LowCode.RenderEngine.Application.Contracts
 @using H.LowCode.MetaSchema
 @using H.LowCode.Model
 @using H.Util.Blazor
