--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
@@ -10,9 +10,10 @@
     <!-- 所有项目的razor文件中的 css -->
     <link rel="stylesheet" href="@Assets["H.LowCode.DesignEngine.Host.styles.css"]" />
 
-    <!-- Ant Design Pro Blazor (antblazor库会动态引入js,css资源,此处可无需引入.为避免在按需动态引入时样式渲染闪烁问题,此处提前引入) -->
+    <!-- Ant Design Pro Blazor (antblazor库会自动引入js,css资源(auto模式不支持自动引入),此处可无需引入.为避免在按需动态引入时样式渲染闪烁问题,此处提前引入) -->
     <link href="@Assets["_content/AntDesign/css/ant-design-blazor.css"]" rel="stylesheet" />
     <link href="@Assets["_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css"]" rel="stylesheet" />
+    <script src="@Assets["_content/AntDesign/js/ant-design-blazor.js"]"></script>
 
     <link href="@Assets["manifest.json"]" rel="manifest" />
 
