--- a/src/DesignEngine/H.LowCode.MyApp/Pages/DataSource/TableDataSource.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/DataSource/TableDataSource.razor
@@ -1,7 +1,7 @@
 ﻿@namespace H.LowCode.MyApp
 @inherits LowCodeComponentBase
 
-@inject IHttpClientFactory HttpClientFactory
+@inject IDataSourceAppService DataSourceAppService
 @inject IMessageService Message
 @inject ComponentStateWrapper<TableDataSource, IList<DataSourceListModel>> DataSourceListState
 
@@ -14,7 +14,7 @@
     </div>
 </div>
 <Table TItem="DataSourceListModel" DataSource="@DataSourceListState.Value" Total="_total"
-       @bind-PageIndex="@_pageIndex" @bind-PageSize="@_pageSize">
+@bind-PageIndex="@_pageIndex" @bind-PageSize="@_pageSize">
     <PropertyColumn Title="名称" Property="c=>c.Name" Sortable />
     <PropertyColumn Title="中文名" Property="c=>c.DisplayName" Sortable />
     <PropertyColumn Title="修改人" Property="c=>c.ModifiedUser" />
@@ -150,7 +150,7 @@
                 {
                     <a onclick="@(() => SaveFieldAsync(context.Id))" class="save">保存</a>
                     <Popconfirm Title="确定取消吗?" OkText="确定" CancelText="取消"
-                                OnConfirm="() => FieldCancelEditAsync(context.Id)">
+                    OnConfirm="() => FieldCancelEditAsync(context.Id)">
                         <a>取消</a>
                     </Popconfirm>
                 }
@@ -187,19 +187,12 @@
 
     private async Task<IList<DataSourceListModel>> LoadDataSourcesAsync(int pageIndex, int pageSize)
     {
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-
-        var result = await httpClient.GetFromJsonAsync<List<DataSourceListModel>>($"api/datasource/getlist?appId={AppId}&dataSourceType=1");
-        return result;
+        return await DataSourceAppService.GetListAsync(AppId, new() { DataSourceType = DataSourceTypeEnum.Table });
     }
 
     private async Task<DataSourceSchema> GetDataSourceAsync(string dataSourceId)
     {
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-
-        var dataSourceSchema = await httpClient.GetFromJsonAsync<DataSourceSchema>($"api/datasource/get?appId={AppId}&id={dataSourceId}");
+        var dataSourceSchema = await DataSourceAppService.GetByIdAsync(AppId, dataSourceId);
 
         //初始化缓存
         dataSourceSchema.TableFields.ForEach(item =>
@@ -215,12 +208,12 @@
         // var validate = _form.Validate();
         // if (validate)
         // {
-        var result = await SaveDataSourceSchemaAsync();
-        if (result.StatusCode == HttpStatusCode.OK)
+        var isSuccess = await SaveDataSourceSchemaAsync();
+        if (isSuccess)
         {
             _visible = false;
             //_form.Submit();
-            await Message.Success("保存成功！");
+            await Message.Success("保存成功");
             //_form.Reset();
 
             //StateHasChanged();
@@ -228,7 +221,7 @@
         else
         {
             _visible = true;
-            await Message.Error($"保存失败: {result.ReasonPhrase}");
+            await Message.Error($"保存失败");
         }
         // }
         // else
@@ -242,22 +235,14 @@
         DataSourceListState.Value = await LoadDataSourcesAsync(1, 50);
     }
 
-    private async Task<HttpResponseMessage> SaveDataSourceSchemaAsync()
+    private async Task<bool> SaveDataSourceSchemaAsync()
     {
         //过滤空字段
         _dataSource.TableFields = _dataSource.TableFields
             .Where(t => !t.Name.IsNullOrEmpty() && !t.DisplayName.IsNullOrEmpty())
             .ToList();
 
-        string jsonSchema = _dataSource.ToJson();
-
-        var content = new StringContent(jsonSchema, Encoding.UTF8, "application/json");
-
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-        var result = await httpClient.PostAsync($"api/datasource/save?appId={AppId}", content);
-
-        return result;
+        return await DataSourceAppService.SaveAsync(AppId, _dataSource);
     }
 
     private async Task CreateAsync()
@@ -272,7 +257,6 @@
 
     private async Task EditAsync(string id)
     {
-        await Task.Delay(1);
         _visible = true;
         _modalTitle = "编辑数据表";
         _dataSource = await GetDataSourceAsync(id);
@@ -282,11 +266,8 @@
 
     private async Task DeleteAsync(string id)
     {
-        await Task.Delay(1);
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
+        await DataSourceAppService.DeleteAsync(AppId, id);
 
-        await httpClient.GetAsync($"api/datasource/delete?appId={AppId}&id={id}");
         await Message.Success("删除成功！");
     }
 
