--- a/src/DesignEngine/H.LowCode.MyApp/Pages/PageManager.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/PageManager.razor
@@ -3,7 +3,7 @@
 @inherits LowCodePageComponentBase
 @layout MyAppLayout
 
-@inject IHttpClientFactory HttpClientFactory
+@inject IPageAppService PageAppService
 @inject IMessageService Message
 @inject ComponentStateWrapper<PageManager, IList<PageListModel>> PageListState
 
@@ -19,7 +19,7 @@
 </div>
 
 <Table TItem="PageListModel" DataSource="@PageListState.Value" PageSize="15" PageIndex="1" Total="_total"
-       @bind-SelectedRows="selectedRows" Style="height:100%;" RowKey="c=>c.PageId">
+@bind-SelectedRows="selectedRows" Style="height:100%;" RowKey="c=>c.PageId">
     <PropertyColumn Title="ID" Property="c=>c.PageId" />
     <PropertyColumn Title="页面名称" Property="c=>c.PageName" Sortable />
     <PropertyColumn Title="排序" Property="c=>c.Order" />
@@ -29,8 +29,8 @@
         <Switch @bind-Checked="@context.PublishStatus" />
     </PropertyColumn>
     <ActionColumn Title="操作" Width="180">
-         <Space Size=@("middle")>
-             <SpaceItem>
+        <Space Size=@("middle")>
+            <SpaceItem>
                 <a href="@($"/designer/{AppId}/{context.PageId}")" target="_blank" style="padding: 7px;border: solid #b7eb8f 1px;border-radius: 2px;line-height: 11px;height: 26px;display: block;background-color: #f6ffed;color: #389e0d;">设计</a>
             </SpaceItem>
             <SpaceItem>
@@ -45,7 +45,7 @@
 
 <Modal Title="新建页面" @bind-Visible="@_visible" OnOk="OnConfirmAsync">
     <Form Model="@_pageSchema" LabelColSpan="8" WrapperColSpan="16" OnFinish="OnFinishAsync" @ref="@_form"
-          ValidateMode="@FormValidateMode.Complex" ValidateOnChange="true">
+    ValidateOnChange="true">
         <FormItem Label="页面名称" Required>
             <Input @bind-Value="@context.Name" />
         </FormItem>
@@ -92,20 +92,12 @@
 
     private async Task<IList<PageListModel>> LoadPagesAsync(int pageIndex, int pageSize)
     {
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-
-        var result = await httpClient.GetFromJsonAsync<List<PageListModel>>($"api/designer/getpages?appId={AppId}");
-        return result;
+        return await PageAppService.GetListAsync(AppId);
     }
 
     private async Task<PageSchema> GetPageAsync(string pageId)
     {
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-
-        var pageSchema = await httpClient.GetFromJsonAsync<PageSchema>($"api/designer/getpage?appId={AppId}&pageId={pageId}");
-        return pageSchema;
+        return await PageAppService.GetByIdAsync(AppId, pageId);
     }
 
     private void CreateAsync(string parentId)
@@ -127,10 +119,8 @@
 
     private async Task DeleteAsync(string pageId)
     {
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
+        await PageAppService.DeleteAsync(AppId, pageId);
 
-        await httpClient.GetAsync($"api/designer/deletepage?appId={AppId}&pageId={pageId}");
         await Message.Success("删除成功！");
     }
 
@@ -139,8 +129,8 @@
         var validate = _form.Validate();
         if (validate)
         {
-            var result = await SavePageSchemaAsync();
-            if (result.StatusCode == HttpStatusCode.OK)
+            var isSuccess = await SavePageSchemaAsync();
+            if (isSuccess)
             {
                 _visible = false;
                 _form.Submit();
@@ -150,7 +140,7 @@
             else
             {
                 _visible = true;
-                await Message.Error($"保存失败: {result.ReasonPhrase}");
+                await Message.Error("保存失败");
             }
         }
         else
@@ -164,16 +154,8 @@
         PageListState.Value = await LoadPagesAsync(1, 50);
     }
 
-    private async Task<HttpResponseMessage> SavePageSchemaAsync()
+    private async Task<bool> SavePageSchemaAsync()
     {
-        string jsonSchema = _pageSchema.ToJson();
-
-        var content = new StringContent(jsonSchema, Encoding.UTF8, "application/json");
-
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-        var result = await httpClient.PostAsync($"api/designer/savepage", content);
-
-        return result;
+        return await PageAppService.SaveAsync(_pageSchema);
     }
 }
