--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
@@ -2,7 +2,7 @@
 @inherits LowCodeComponentBase
 @layout WorkbenchLayout
 
-@inject IHttpClientFactory HttpClientFactory
+@inject IAppApplicationService AppApplicationService
 @inject IMessageService _message
 
 <div style="width:100%; height: 500px; margin:auto;">
@@ -17,7 +17,7 @@
 
 <Modal Title="创建应用" @bind-Visible="@_visible" OnOk="OnConfirm">
     <Form Model="@_appSchema" LabelColSpan="8" WrapperColSpan="16" OnFinish="OnFinish" @ref="@_form"
-          ValidateMode="@FormValidateMode.Rules" ValidateOnChange="true">
+    ValidateOnChange="true">
         <FormItem Label="应用标识" Required>
             <Input @bind-Value="@context.Id" />
         </FormItem>
@@ -46,8 +46,8 @@
         var validate = _form.Validate();
         if (validate)
         {
-            var result = await SaveAppSchema();
-            if (result.StatusCode == HttpStatusCode.OK)
+            var isSuccess = await SaveAppSchema();
+            if (isSuccess)
             {
                 _visible = false;
                 _form.Submit();
@@ -58,7 +58,7 @@
             else
             {
                 _visible = true;
-                await _message.Error($"新建失败: {result.ReasonPhrase}");
+                await _message.Error("新建失败");
             }
         }
         else
@@ -74,16 +74,8 @@
     }
 
 
-    private async Task<HttpResponseMessage> SaveAppSchema()
+    private async Task<bool> SaveAppSchema()
     {
-        string jsonSchema = _appSchema.ToJson();
-
-        var content = new StringContent(jsonSchema, Encoding.UTF8, "application/json");
-
-        var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = base.GetBaseUri();
-        var result = await httpClient.PostAsync($"api/designer/saveapp", content);
-
-        return result;
+        return await AppApplicationService.SaveAsync(_appSchema);
     }
 }
