--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
@@ -19,13 +19,7 @@
         <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:30px 0 10px;">数据源</div>
         <div class="propertysetting-item">
             <label>类型：</label>
-            <RadioGroup DefaultValue="DataSourceTypeEnum.None" TValue="DataSourceTypeEnum" @bind-Value="@Page.DataSource.DataSourceType">
-                <Radio Value="DataSourceTypeEnum.None">None</Radio>
-                <Radio Value="DataSourceTypeEnum.Table">Table</Radio>
-                <Radio Value="DataSourceTypeEnum.API">API</Radio>
-                <Radio Value="DataSourceTypeEnum.Option">Options</Radio>
-                <Radio Value="DataSourceTypeEnum.SQL">SQL</Radio>
-            </RadioGroup>
+            <EnumRadioGroup TEnum="DataSourceTypeEnum" @bind-Value="@Page.DataSource.DataSourceType" Name="radio_datasourcetype"></EnumRadioGroup>
         </div>
 
         @if (Page.DataSource.DataSourceType == DataSourceTypeEnum.Table)
